Added isolate scope for spinner

--- a/client/components/mainPage/mainPage.tmpl.html
+++ b/client/components/mainPage/mainPage.tmpl.html
@@ -19,5 +19,5 @@
         </div>
         <footer-section show-login="hide.userInfo"></footer-section>
     </div>
-    <spinner></spinner>
+    <spinner hide-gif="hide.spinnerGIF" hide-css="hide.spinnerCSS"></spinner>
 </div>
