--- a/client/components/spinner/spinner.tmpl.html
+++ b/client/components/spinner/spinner.tmpl.html
@@ -1,7 +1,7 @@
-<div class="loading_spinner" ng-hide="hide.spinnerGIF">
+<div class="loading_spinner" ng-hide="hideGif">
     <img src="resources/min/ajax-loader.gif" class="ajax-loader" />
 </div>
-<div class="loading_spinner" ng-hide="hide.spinnerCSS">
+<div class="loading_spinner" ng-hide="hideCss">
     <div class="sk-cube-grid">
         <div class="sk-cube sk-cube1"></div>
         <div class="sk-cube sk-cube2"></div>
