--- a/client/views/index.tmpl.html
+++ b/client/views/index.tmpl.html
@@ -4,7 +4,7 @@
     <title>Some Times</title>
     <link rel="shortcut icon" href="resources/graphic/favicon.png" type="image/png">
     <!--Third-party Libraries-->
-    <link href="dest/fonts.css" rel="stylesheet" />
+    <link href="styles/fonts.css" rel="stylesheet" />
     <link href="dest/libs.min.css" rel="stylesheet" />
     <link href="dest/styles.css" rel="stylesheet" />
     <script src="dest/libs.min.js"></script>
