Added selectSection with isolate scope

--- a/client/components/mainPage/mainPage.tmpl.html
+++ b/client/components/mainPage/mainPage.tmpl.html
@@ -10,8 +10,7 @@
             </div>
             <div class="main_section">
                 <div class="page_body container">
-                    <select-form></select-form>
-                    <section-list></section-list>
+                    <select-section show-section="showSection"></select-section>
                     <news></news>
                     <bookmarks></bookmarks>
                 </div>
