--- a/client/components/news/news.tmpl.html
+++ b/client/components/news/news.tmpl.html
@@ -1,4 +1,4 @@
-<div class="row" ng-hide="hide.currentSection">
+<div class="row" ng-hide="hide.sectionNews">
     <div class="col-sm-6" ng-repeat="article in articles">
         <div class="more_info">
             <a class="more_link" href="{{article.web_url}}" target="_blank">More info...</a>
