Added fetching section articles

--- a/client/components/selectSection/selectSection.tmpl.html
+++ b/client/components/selectSection/selectSection.tmpl.html
@@ -5,5 +5,5 @@
         <option value="">Choose news section</option>
     </select>
     <button ng-click="chooseSection(currentSection)" id="get_news_button"
-            class="btn btn-primary select_button">Get news</button>
+            class="btn btn-primary select_button">Get latest news</button>
 </div>
