Updated styles for user info

--- a/client/components/userInfo/userInfo.tmpl.html
+++ b/client/components/userInfo/userInfo.tmpl.html
@@ -1,5 +1,5 @@
 <div class="user_info" ng-hide="hideSection">
-    <div class="username">{{username}}</div>
+    <div class="username ellipsis">{{username}}</div>
     <div class="bookmark_button" ng-click="showBookmarks()">
         <img src="/resources/min/bookmark.png" alt="favorite_icon">
     </div>
