Changed bookmarks page to use news-list. Added isolate scope

--- a/client/components/bookmarks/bookmarks.tmpl.html
+++ b/client/components/bookmarks/bookmarks.tmpl.html
@@ -1,30 +1,10 @@
-<div class="row" ng-hide="hide.bookmarks">
-    <div class="sub_heading_container" ng-hide="hide.bookmarksHeading">
+<div class="row" ng-show="isDisplayed">
+    <div class="sub_heading_container" ng-show="showList">
         <h2 class="sub_heading">Bookmarks</h2>
     </div>
-    <div class="no_bookmarks_msg" ng-hide="hide.noBookmarksMsg">
+    <div class="no_bookmarks_msg" ng-show="showNoBookmarks">
         <h2 class="sub_heading">No added bookmarks yet</h2>
     </div>
-    <div class="col-sm-6" ng-repeat="article in articles">
-        <div class="more_info">
-            <a class="more_link" href="{{article.web_url}}" target="_blank">More info...</a>
-            <div class="bookmark_button" ng-click="deleteFromBookmarks(article)" ng-hide="hide.userInfo">
-                <img src="./resources/min/bookmark_marked.png" alt="favorite_icon">
-            </div>
-        </div>
-        <div class="left_column">
-            <div class="image_container" ng-hide="article.hideImage">
-                <img src="" />
-            </div>
-            <div class="publish_info">
-                <span>{{article.date}}</span>
-                <span>{{article.author}}</span>
-            </div>
-        </div>
-        <div class="right_column">
-            <h3 class="article_headline">{{article.title}}</h3>
-            <p>{{article.lead_paragraph}}</p>
-        </div>
-        <div class="clear"></div>
-    </div>
+    <news-list is-displayed="showList" update-news-list="updateList"
+               articles="bookmarkArticles" is-bookmark-list="true">
 </div>
