--- a/client/components/mainPage/mainPage.tmpl.html
+++ b/client/components/mainPage/mainPage.tmpl.html
@@ -16,7 +16,7 @@
                     <news-list is-displayed="!hide.sectionNews" update-news-list="updateNewsList"
                                articles="sectionArticles">
                     </news-list>
-                    <bookmarks></bookmarks>
+                    <bookmarks is-displayed="!hide.bookmarks"></bookmarks>
                 </div>
             </div>
         </div>
