Updated components source code to use Jogn Papa styleguide

--- a/client/components/loginPage/loginPage.tmpl.html
+++ b/client/components/loginPage/loginPage.tmpl.html
@@ -1,4 +1,4 @@
-<div class="login_page" ng-controller="LoginPageCtrl">
+<div class="login_page">
     <div class="container">
         <h3 class="login_title">Enter your credentials</h3>
         <div class="error_note" ng-show="showErrorNote">Please double check your entries</div>
