Added recommended article directive

--- a/client/components/mainPage/mainPage.tmpl.html
+++ b/client/components/mainPage/mainPage.tmpl.html
@@ -1,7 +1,9 @@
 <div class="main_page">
     <div class="wrapper">
-        <user-info hide-section="hide.userInfo" show-bookmarks="showBookmarks" hide-all="hideAll">
+        <user-info hide-section="hide.userInfo" show-bookmarks="showBookmarks" hide-all="hideAll"
+                   logged-in="loggedIn">
         </user-info>
+        <recommended-news logged-in="loggedIn"></recommended-news>
         <div class="content">
             <div class="header">
                 <div class="logo">
