Updated news list styles

--- a/client/styles/sass/newsList.scss
+++ b/client/styles/sass/newsList.scss
@@ -7,6 +7,8 @@ $color-white: #fff;
         padding: 0 15px;
         border-left: 1px solid rgba(200, 200, 200, 0.5);
         border-right: 1px solid rgba(200, 200, 200, 0.5);
+        width: 60%;
+        margin: 0 auto;
     }
     .article_heading {
         .article_headline {
