--- a/client/components/recommendedNews/recommendedNews.tmpl.html
+++ b/client/components/recommendedNews/recommendedNews.tmpl.html
@@ -1,8 +1,13 @@
-<div ng-show="!!currentArticle" class="recommended-article">
-    <h3 class="title ellipsis">{{currentArticle.title}}</h3>
-    <img ng-src="{{currentArticle.imageUrl}}" class="image pull-left"/>
-    <p class="description">{{currentArticle.description}}</p>
-    <a class="more_link btn btn-default pull-right" ng-href="{{currentArticle.url}}" target="_blank">
-        Read more...
-    </a>
+<div ng-show="!!currentArticle" class="recommended-article-container">
+    <div class="section-title-container">
+        <h2 class="section-title">It should be interesting...</h2>
+    </div>
+    <div class="recommended-article">
+        <h3 class="title ellipsis">{{currentArticle.title}}</h3>
+        <img ng-src="{{currentArticle.imageUrl}}" class="image pull-left"/>
+        <p class="description">{{currentArticle.description}}</p>
+        <a class="more_link btn btn-default pull-right" ng-href="{{currentArticle.url}}" target="_blank">
+            Read more...
+        </a>
+    </div>
 </div>
