--- a/client/styles/sass/recommendedNews.scss
+++ b/client/styles/sass/recommendedNews.scss
@@ -1,21 +1,44 @@
 $white-color: #fff;
+$grey-color: #999;
 
 $font-size: 14px;
 $line-height: 1;
 $lines-to-show: 4;
 
-.recommended-article {
+.recommended-article-container {
     position: fixed;
     right: 25px;
     top: 25px;
+    height: 165px;
     width: 350px;
+    z-index: 100;
+    .section-title-container {
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        background-color: rgba($grey-color, 0.7);
+        width: 100%;
+        height: 35px;
+        .section-title {
+            text-align: center;
+            color: $white-color;
+            font-family: "BerenisADFProRegular";
+            line-height: 40px;
+        }
+    }
+}
+
+.recommended-article {
+    position: relative;
+    width: 100%;
     height: 130px;
     padding: 10px;
     border-radius: 5px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
     background: rgba($white-color, 0.7);
-    z-index: 100;
     .title {
         font-size: 16px;
+        font-weight: bold;
         text-align: center;
         margin: 0 0 3px 0;
     }
