Hide avatar placeholder path

--- a/client/components/userInfo/userInfo.tmpl.html
+++ b/client/components/userInfo/userInfo.tmpl.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="upload_form">
-        <input type="text" placeholder=" type image url" ng-model="avatarUrl"
+        <input type="text" placeholder=" type image url" ng-model="displayedAvatarUrl"
                ng-model-options="{ updateOn: 'blur' }">
     </div>
 </div>
