Updated register validation

--- a/client/components/registerPage/registerPage.tmpl.html
+++ b/client/components/registerPage/registerPage.tmpl.html
@@ -6,9 +6,12 @@
             <fieldset class="form-group">
                 <input type="text" name="name" placeholder="Name" ng-model="name" required>
                 <input type="email" name="email" placeholder="Email" ng-model="email" required>
-                <input type="text" name="username" placeholder="Username" ng-model="username" required>
-                <input type="password" name="password" placeholder="Password" ng-model="password" required>
-                <input type="password" name="password2" placeholder="Retype Password" ng-model="password2" required>
+                <input type="text" name="username" placeholder="Username" ng-model="username" required
+                       validate-username>
+                <input type="password" name="password" placeholder="Password" ng-model="password" required
+                       validate-password>
+                <input type="password" name="password2" placeholder="Retype Password" ng-model="password2"
+                       required>
             </fieldset>
             <input type="submit" class="btn btn-primary register_btn" value="Submit" ng-click="makeRequest()"/>
             <span class="separator">or</span>
